<resources>
    <string name="app_name">Calculate</string>
    <string name="hint_for_text_view">0</string>
    <string name="text_for_button_clear">C</string>
    <string name="text_for_button_abs">+/-</string>
    <string name="text_fot_button_percent">%</string>
    <string name="text_fot_button_division">/</string>
    <string name="text_fot_button_multiplication">*</string>
    <string name="text_fot_button_addition">+</string>
    <string name="text_fot_button_subtract">-</string>
    <string name="text_fot_button_dot">.</string>
    <string name="text_fot_button_equals">=</string>
    <string name="text_fot_button_1">1</string>
    <string name="text_fot_button_2">2</string>
    <string name="text_fot_button_3">3</string>
    <string name="text_fot_button_4">4</string>
    <string name="text_fot_button_5">5</string>
    <string name="text_fot_button_6">6</string>
    <string name="text_fot_button_7">7</string>
    <string name="text_fot_button_8">8</string>
    <string name="text_fot_button_9">9</string>
    <string name="text_fot_button_0">0</string>
</resources>