<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="4"
    android:orientation="horizontal"
    android:rowCount="5">

    <Button
        android:id="@+id/btn_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginHorizontal="@dimen/margin_for_button_hz"
        android:layout_marginVertical="@dimen/margin_for_button_vr"
        android:text="@string/text_for_button_clear"
        app:cornerRadius="@dimen/off_radius_for_buttons"
        android:textSize="@dimen/text_size_for_buttons_30sp"/>

    <Button
        android:id="@+id/btn_abs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginHorizontal="@dimen/margin_for_button_hz"
        android:layout_marginVertical="@dimen/margin_for_button_vr"
        android:text="@string/text_for_button_abs"
        app:cornerRadius="@dimen/off_radius_for_buttons"
        android:textSize="@dimen/text_size_for_buttons_30sp"/>

    <Button
        android:id="@+id/btn_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginHorizontal="@dimen/margin_for_button_hz"
        android:layout_marginVertical="@dimen/margin_for_button_vr"
        android:text="@string/text_fot_button_percent"
        app:cornerRadius="@dimen/off_radius_for_buttons"
        android:textSize="@dimen/text_size_for_buttons_30sp"/>

    <Button
        android:id="@+id/btn_division"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginHorizontal="@dimen/margin_for_button_hz"
        android:layout_marginVertical="@dimen/margin_for_button_vr"
        android:text="@string/text_fot_button_division"
        app:cornerRadius="@dimen/off_radius_for_buttons"
        android:textSize="@dimen/text_size_for_buttons_30sp"/>

    <Button
        android:id="@+id/btn_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginHorizontal="@dimen/margin_for_button_hz"
        android:layout_marginVertical="@dimen/margin_for_button_vr"
        android:text="@string/text_fot_button_7"
        app:cornerRadius="@dimen/off_radius_for_buttons"
        android:textSize="@dimen/text_size_for_buttons_30sp"/>

    <Button
        android:id="@+id/btn_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginHorizontal="@dimen/margin_for_button_hz"
        android:layout_marginVertical="@dimen/margin_for_button_vr"
        android:text="@string/text_fot_button_8"
        app:cornerRadius="@dimen/off_radius_for_buttons"
        android:textSize="@dimen/text_size_for_buttons_30sp"/>

    <Button
        android:id="@+id/btn_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginHorizontal="@dimen/margin_for_button_hz"
        android:layout_marginVertical="@dimen/margin_for_button_vr"
        android:text="@string/text_fot_button_9"
        app:cornerRadius="@dimen/off_radius_for_buttons"
        android:textSize="@dimen/text_size_for_buttons_30sp"/>

    <Button
        android:id="@+id/btn_multiplication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginHorizontal="@dimen/margin_for_button_hz"
        android:layout_marginVertical="@dimen/margin_for_button_vr"
        android:text="@string/text_fot_button_multiplication"
        app:cornerRadius="@dimen/off_radius_for_buttons"
        android:textSize="@dimen/text_size_for_buttons_30sp"/>

    <Button
        android:id="@+id/btn_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginHorizontal="@dimen/margin_for_button_hz"
        android:layout_marginVertical="@dimen/margin_for_button_vr"
        android:text="@string/text_fot_button_4"
        app:cornerRadius="@dimen/off_radius_for_buttons"
        android:textSize="@dimen/text_size_for_buttons_30sp"/>

    <Button
        android:id="@+id/btn_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginHorizontal="@dimen/margin_for_button_hz"
        android:layout_marginVertical="@dimen/margin_for_button_vr"
        android:text="@string/text_fot_button_5"
        app:cornerRadius="@dimen/off_radius_for_buttons"
        android:textSize="@dimen/text_size_for_buttons_30sp"/>

    <Button
        android:id="@+id/btn_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginHorizontal="@dimen/margin_for_button_hz"
        android:layout_marginVertical="@dimen/margin_for_button_vr"
        android:text="@string/text_fot_button_6"
        app:cornerRadius="@dimen/off_radius_for_buttons"
        android:textSize="@dimen/text_size_for_buttons_30sp"/>

    <Button
        android:id="@+id/btn_subtract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginHorizontal="@dimen/margin_for_button_hz"
        android:layout_marginVertical="@dimen/margin_for_button_vr"
        android:text="@string/text_fot_button_subtract"
        app:cornerRadius="@dimen/off_radius_for_buttons"
        android:textSize="@dimen/text_size_for_buttons_30sp"/>

    <Button
        android:id="@+id/btn_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginHorizontal="@dimen/margin_for_button_hz"
        android:layout_marginVertical="@dimen/margin_for_button_vr"
        android:text="@string/text_fot_button_1"
        app:cornerRadius="@dimen/off_radius_for_buttons"
        android:textSize="@dimen/text_size_for_buttons_30sp"/>

    <Button
        android:id="@+id/btn_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginHorizontal="@dimen/margin_for_button_hz"
        android:layout_marginVertical="@dimen/margin_for_button_vr"
        android:text="@string/text_fot_button_2"
        app:cornerRadius="@dimen/off_radius_for_buttons"
        android:textSize="@dimen/text_size_for_buttons_30sp"/>

    <Button
        android:id="@+id/btn_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginHorizontal="@dimen/margin_for_button_hz"
        android:layout_marginVertical="@dimen/margin_for_button_vr"
        android:text="@string/text_fot_button_3"
        app:cornerRadius="@dimen/off_radius_for_buttons"
        android:textSize="@dimen/text_size_for_buttons_30sp"/>

    <Button
        android:id="@+id/btn_addition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginHorizontal="@dimen/margin_for_button_hz"
        android:layout_marginVertical="@dimen/margin_for_button_vr"
        android:text="@string/text_fot_button_addition"
        app:cornerRadius="@dimen/off_radius_for_buttons"
        android:textSize="@dimen/text_size_for_buttons_30sp"/>

    <Button
        android:id="@+id/btn_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnSpan="2"
        android:layout_columnWeight="1"
        android:layout_marginHorizontal="@dimen/margin_for_button_hz"
        android:layout_marginVertical="@dimen/margin_for_button_vr"
        android:text="@string/text_fot_button_0"
        app:cornerRadius="@dimen/off_radius_for_buttons"
        android:textSize="@dimen/text_size_for_buttons_30sp"/>

    <Button
        android:id="@+id/btn_dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginHorizontal="@dimen/margin_for_button_hz"
        android:layout_marginVertical="@dimen/margin_for_button_vr"
        android:text="@string/text_fot_button_dot"
        app:cornerRadius="@dimen/off_radius_for_buttons"
        android:textSize="@dimen/text_size_for_buttons_30sp"/>

    <Button
        android:id="@+id/btn_equals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_marginHorizontal="@dimen/margin_for_button_hz"
        android:layout_marginVertical="@dimen/margin_for_button_vr"
        android:text="@string/text_fot_button_equals"
        app:cornerRadius="@dimen/off_radius_for_buttons"
        android:textSize="@dimen/text_size_for_buttons_30sp"/>

</GridLayout>
